--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <h3>business admin & finance</h3>
           <ul>
             <li>
-              got an <strong>MBA with a Finance concentration</strong> from
+              earned an <strong>MBA with a Finance concentration</strong> from
               <a href="https://redlands.edu/">University of Redlands</a>
             </li>
             <li>
