--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="msapplication-config"
+      content="assets/images/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#e29c9c" />
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
-    <script type="text/javascript" src="scripts/index.js"></script>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -24,12 +28,7 @@
     />
     <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
     <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
-    <meta name="msapplication-TileColor" content="#e29c9c" />
-    <meta
-      name="msapplication-config"
-      content="assets/images/favicon/browserconfig.xml"
-    />
-    <meta name="theme-color" content="#e29c9c" />
+    <script type="text/javascript" src="scripts/index.js" />
     <title>Tannor Breitigam</title>
   </head>
   <body>
