--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
     <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
     <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
-    <script type="text/javascript" src="scripts/index.js" />
+    <script type="text/javascript" src="scripts/index.js" ></script>
     <title>Tannor Breitigam</title>
   </head>
   <body>
