--- a/index.html
+++ b/index.html
@@ -127,25 +127,6 @@
           <h2>some things i've built</h2>
           <section id="projects">
             <div>
-              <h4>FlowFi Onboarding</h4>
-              <img
-                src="assets/images/projects/flowfi-onboarding.png"
-                alt="a screenshot of a web page with a sign up prompt"
-              />
-              <p>
-                <a href="https://app.flowfi.com/#/experts-apply">For experts</a>
-                *
-                <a href="https://app.flowfi.com/#/customers-apply"
-                  >For customers</a
-                >
-              </p>
-              <em>
-                Onboard financial experts and customers to FlowFi's financial
-                services platform (you may use alt + click on the progress
-                indicator up top to view other pages)
-              </em>
-            </div>
-            <div>
               <h4>Ball is Lyf3</h4>
               <img
                 src="assets/images/projects/air-bud.png"
@@ -208,16 +189,15 @@
 
           <h2>where i've worked</h2>
           <p>
+            Currently I do independent contracting.
+          </p>
+          <p>
             My last software gig was at high-growth fintech,
             <a href="https://flowfi.com/">FlowFi</a>, where I was the
             <strong>only cold hire</strong> on the engineering team, and moved
             quickly <strong>from junior to mid</strong>. I was able to make
             significant impacts to nearly every layer in their stack, front to
             back.
-          </p>
-          <p>
-            I'm also doing some full-stack contract work for them right now in
-            my spare time.
           </p>
 
           <h3>Flow Finance</h3>
