add OpenDelta app to projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
     <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
     <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
-    <script type="text/javascript" src="scripts/index.js" ></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
     <title>Tannor Breitigam</title>
   </head>
   <body>
@@ -48,7 +48,10 @@
           <p>
             <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a> *
             <a href="https://github.com/breizeway/">Github</a> *
-            <a href="https://www.upwork.com/freelancers/~01ec278d10b13286c3?mp_source=share">Upwork</a>
+            <a
+              href="https://www.upwork.com/freelancers/~01ec278d10b13286c3?mp_source=share"
+              >Upwork</a
+            >
           </p>
           <br />
           <p>Hey there 👋</p>
@@ -127,6 +130,21 @@
           <h2>some things i've built</h2>
           <section id="projects">
             <div>
+              <h4>OpenDelta App</h4>
+              <img
+                src="assets/images/projects/opendelta.png"
+                alt="a screenshot of a web app showing a dashboard with line charts"
+              />
+              <p>
+                <a href="https://app.opendelta.com/">Live Site</a>
+              </p>
+              <em>
+                A live, responsive dashboard app for a cryptocurrency startup
+                that I architected and built from scratch for a client (NextJs,
+                TypeScript, & MaterialUI) (development ongoing)
+              </em>
+            </div>
+            <div>
               <h4>Ball is Lyf3</h4>
               <img
                 src="assets/images/projects/air-bud.png"
@@ -188,9 +206,7 @@
           </section>
 
           <h2>where i've worked</h2>
-          <p>
-            Currently I do independent contracting.
-          </p>
+          <p>Currently I do independent contracting.</p>
           <p>
             My last software gig was at high-growth fintech,
             <a href="https://flowfi.com/">FlowFi</a>, where I was the
