--- a/index.html
+++ b/index.html
@@ -206,9 +206,11 @@
           </section>
 
           <h2>where i've worked</h2>
-          <p>Currently I do independent contracting.</p>
           <p>
-            My last software gig was at high-growth fintech,
+            Currently I do independent freelancing for a variety of clients.
+          </p>
+          <p>
+            My last full-time gig was at high-growth fintech,
             <a href="https://flowfi.com/">FlowFi</a>, where I was the
             <strong>only cold hire</strong> on the engineering team, and moved
             quickly <strong>from junior to mid</strong>. I was able to make
