--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p>
             I'm open to
             <strong>both full-time and contract</strong> opportunities right
-            now. <a href="#know-more-heading">Talk to me</a>.
+            now. <a href="#know-more">Talk to me</a>.
           </p>
 
           <h2>what i'm good at</h2>
@@ -207,15 +207,14 @@
 
           <h2>where i've worked</h2>
           <p>
-            Currently I do independent freelancing for a variety of clients.
+            I'm an independent contractor who works with all types of clients.
           </p>
           <p>
             My last full-time gig was at high-growth fintech,
             <a href="https://flowfi.com/">FlowFi</a>, where I was the
             <strong>only cold hire</strong> on the engineering team, and moved
-            quickly <strong>from junior to mid</strong>. I was able to make
-            significant impacts to nearly every layer in their stack, front to
-            back.
+            quickly <strong>from junior to mid</strong>. I regularly contributed
+            to every layer in the stack, front to back.
           </p>
 
           <h3>Flow Finance</h3>
@@ -303,13 +302,13 @@
             </li>
           </ul>
 
-          <h2 id="know-more-heading">would you like to know more?</h2>
+          <h2>how to reach me</h2>
+          <p id="know-more">Would you like to know more? Send me an email 👇</p>
           <img
             id="know-more-gif"
             class="hidden"
             src="assets/images/desire-to-know-more.gif"
           />
-          <p>Send me an email 👇</p>
           <form id="contact-form">
             <div>
               <label for="contact-form__email">your email address</label>
