--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
           <h2>some things i've built</h2>
           <section id="projects">
             <div>
+              <h4>OpenDelta App</h4>
               <img
                 src="assets/images/projects/opendelta.png"
                 alt="a screenshot of a web app showing a dashboard with line charts"
               />
-              <h4>OpenDelta App</h4>
               <p>
                 <a href="https://app.opendelta.com/">Live Site</a>
               </p>
@@ -145,11 +145,11 @@
               </em>
             </div>
             <div>
+              <h4>Elite Commercial Door</h4>
               <img
                 src="assets/images/projects/elite-door.png"
                 alt="a screenshot of the home page of Elite Commercial Door"
               />
-              <h4>Elite Commercial Door Landing Page</h4>
               <p>
                 <a href="https://elite-door.com/">Live Site</a>
                 *
@@ -162,11 +162,11 @@
               </em>
             </div>
             <div>
+              <h4>Ball is Lyf3</h4>
               <img
                 src="assets/images/projects/air-bud.png"
                 alt="a screenshot of the home page of ballislyf3.net"
               />
-              <h4>Ball is Lyf3</h4>
               <p>
                 <a href="https://ballislyf3.net/?leaderboard_safe_mode=true"
                   >Live Site</a
@@ -180,11 +180,11 @@
               </em>
             </div>
             <div>
+              <h4>SongBird</h4>
               <img
                 src="assets/images/projects/song-bird.png"
                 alt="a screenshot of the SongBird website showing yellow buttons and a text input with song lyrics"
               />
-              <h4>SongBird</h4>
               <p>
                 <a href="https://songbird.tannor.net">Live Site</a> *
                 <a href="https://github.com/breizeway/tab-lab">Github</a>
