ball is lyf3 sfw link

--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
                 alt="a screenshot of the home page of ballislyf3.net"
               />
               <p>
-                <a href="https://ballislyf3.net/?leaderboard_safe_mode=true"
-                  >Live Site</a
-                >
+                <a href="https://ballislyf3.net/?sfw-mode=true">Live Site</a>
                 *
                 <a href="https://github.com/breizeway/air-bud">Github</a>
               </p>
