--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
           <h2>who i am</h2>
           <p>
             I'm a <strong>full-stack software engineer</strong> in Portland,
-            Oregon. I have a diverse background which includes coding bootcamp,
-            financial service at non-profits, and getting my MBA.
+            Oregon. I have a diverse background which includes coding bootcamp, financial tech administration in higher ed, and getting my MBA.
           </p>
           <p>
             I'm into <strong>difficult puzzles and good design</strong>. I'm not
