rough shape of changes i want to make

--- a/index.html
+++ b/index.html
@@ -39,37 +39,38 @@
         </header>
 
         <main>
-          <p>
-            <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a> *
-            <a href="https://github.com/breizeway/">Github</a> *
-            <a
-              href="https://www.upwork.com/freelancers/~01ec278d10b13286c3?mp_source=share"
-              >Upwork</a
-            >
-          </p>
-          <br />
-          <p>Hey there 👋</p>
-          <p>
-            Welcome to my website! Come learn more about me and how
-            <strong>I make cool things with code</strong>.
-          </p>
+          <!-- <p> -->
+          <!-- </p> -->
+
+          <!-- <br /> -->
+
+          <p>Welcome to my website!</p>
+          <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a> *
+          <a href="https://github.com/breizeway/">Github</a> *
+          <a
+            href="https://www.upwork.com/freelancers/~01ec278d10b13286c3?mp_source=share"
+            >Upwork</a
+          >
 
           <h2>who i am</h2>
           <p>
             I'm a <strong>full-stack software engineer</strong> in Portland,
-            Oregon. I have a diverse background which includes coding bootcamp, financial tech administration in higher ed, and getting my MBA.
+            Oregon. I'm really into whatever brings fun to the web
           </p>
-          <p>
+          <!-- <p>
             I'm into <strong>difficult puzzles and good design</strong>. I'm not
             concerned with a specific tech stack, but rather motivated by
             working with <strong>passionate and uplifting people</strong>.
-          </p>
+          </p> -->
           <p>
-            I'm open to
-            <strong>both full-time and contract</strong> opportunities right
-            now. <a href="#know-more">Talk to me</a>.
+            I'm open to all opportunities. <a href="#know-more">Talk to me</a>.
           </p>
 
+          <h2>what i like to do</h2>
+          <ul>
+            <li>organize my thoughts into lists</li>
+          </ul>
+          <!-- 
           <h2>what i'm good at</h2>
           <ul>
             <li>
@@ -94,9 +95,9 @@
               <strong>analytical thinking</strong>, but also
               <strong>empathetic, clear communication</strong>
             </li>
-          </ul>
+          </ul> -->
 
-          <h2>languages and technologies</h2>
+          <!-- <h2>languages and technologies</h2>
           <ul>
             <li>
               <strong>TypeScript, JavaScript, Node</strong> (anything JavaScript
@@ -118,7 +119,7 @@
               <strong>AWS</strong> (S3, Lambda, AppSync, CloudFormation, SQS,
               SNS, etc)
             </li>
-          </ul>
+          </ul> -->
 
           <h2>some things i've built</h2>
           <section id="projects">
@@ -134,7 +135,7 @@
               <em>
                 A live, responsive dashboard app for a cryptocurrency startup
                 that I architected and built from scratch for a client (NextJs,
-                TypeScript, & MaterialUI) (development ongoing)
+                TypeScript, & MaterialUI) *or it was a dashboard,
               </em>
             </div>
             <div>
@@ -214,18 +215,8 @@
           </section>
 
           <h2>where i've worked</h2>
-          <p>
-            I'm an independent contractor who works with all types of clients.
-          </p>
-          <p>
-            My last full-time gig was at high-growth fintech,
-            <a href="https://flowfi.com/">FlowFi</a>, where I was the
-            <strong>only cold hire</strong> on the engineering team, and moved
-            quickly <strong>from junior to mid</strong>. I regularly contributed
-            to every layer in the stack, front to back.
-          </p>
 
-          <h3>Flow Finance</h3>
+          <h3><a href="https://flowfi.com/">FlowFi</a></h3>
           <span>
             <h4>Software Engineer, Full Stack</h4>
             <em>~ Jul 2022 to Jan 2023 ~</em>
