add helped build projects

--- a/index.html
+++ b/index.html
@@ -64,8 +64,41 @@
           </ul>
 
           <br />
-          <h2>some things i've built</h2>
-          <section id="projects">
+          <h2>some things i've <em>helped</em> build</h2>
+          <section class="projects">
+            <div>
+              <h4>Rings AI App</h4>
+              <img
+                src="assets/images/projects/rings-ai.png"
+                alt="a screenshot of a relationships management app called Rings AI"
+              />
+              <p>
+                <a href="https://rings.ai/">Live Site</a>
+              </p>
+              <em>
+                An all-in-one data enriched CRM (or CRM enrichment layer) to
+                identify, access, and win more opportunities.
+              </em>
+            </div>
+            <div>
+              <h4>FlowFi App</h4>
+              <img
+                src="assets/images/projects/flowfi.png"
+                alt="a screenshot of a fintech app called FlowFi"
+              />
+              <p>
+                <a href="https://www.flowfi.com/">Live Site</a>
+              </p>
+              <em>
+                Matches the best businesses with leading experts to help them
+                with their bookkeeping, FP&A, HR, and tax needs.
+              </em>
+            </div>
+          </section>
+
+          <br />
+          <h2>some things <em>i've</em> built</h2>
+          <section class="projects">
             <div>
               <h4>OpenDelta App</h4>
               <img
