Pare down and add projects I've helped build (#57)
* pared down sections and content

* add helped build projects

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </header>
 
         <main>
-          <p>
+          <p id="social-links">
             <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a> *
             <a href="https://github.com/breizeway/">Github</a> *
             <a
@@ -48,80 +48,57 @@
             >
           </p>
           <br />
-          <p>Hey there 👋</p>
-          <p>
-            Welcome to my website! Come learn more about me and how
-            <strong>I make cool things with code</strong>.
-          </p>
+          <p>👋 Hi, I'm Tannor. Welcome to my website!</p>
 
+          <br />
           <h2>who i am</h2>
-          <p>
-            I'm a <strong>full-stack software engineer</strong> in Portland,
-            Oregon. I have a diverse background which includes coding bootcamp, financial tech administration in higher ed, and getting my MBA.
-          </p>
-          <p>
-            I'm into <strong>difficult puzzles and good design</strong>. I'm not
-            concerned with a specific tech stack, but rather motivated by
-            working with <strong>passionate and uplifting people</strong>.
-          </p>
-          <p>
-            I'm open to
-            <strong>both full-time and contract</strong> opportunities right
-            now. <a href="#know-more">Talk to me</a>.
-          </p>
-
-          <h2>what i'm good at</h2>
           <ul>
             <li>
-              <strong>frontend web development</strong> (I absolutely love
-              TypeScript and building pixel-perfect CSS)
+              I'm a <strong>full-stack software engineer</strong> who lives in
+              Portland, Oregon
             </li>
             <li>
-              <strong>backend development</strong> (I'm experienced in designing
-              semantic and intuitive APIs, especially in serverless
-              environments)
-            </li>
-            <li>
-              <strong>writing SQL</strong> (for nearly 10 years now, since I
-              taught myself as a student worker in college)
-            </li>
-            <li>
-              <strong>scripting and automation</strong> (in my free time I like
-              to write automations on my phone in javascript or with iOS
-              shortcuts)
-            </li>
-            <li>
-              <strong>analytical thinking</strong>, but also
-              <strong>empathetic, clear communication</strong>
+              I like to build things on the web with people who care about great
+              design
             </li>
           </ul>
 
-          <h2>languages and technologies</h2>
-          <ul>
-            <li>
-              <strong>TypeScript, JavaScript, Node</strong> (anything JavaScript
-              adjacent)
-            </li>
-            <li><strong>React</strong>, Next.js, Redux</li>
-            <li><strong>Tailwind, Material UI</strong></li>
-            <li>
-              semantic <strong>HTML and CSS</strong> (either plain old CSS or
-              whatever system you're using)
-            </li>
-            <li><strong>Scala, Python</strong></li>
-            <li>
-              <strong>SQL</strong> (mostly PostgreSQL) and noSQL systems like
-              DynamoDB
-            </li>
-            <li><strong>GraphQL</strong>, Apollo, URQL, RESTful APIs</li>
-            <li>
-              <strong>AWS</strong> (S3, Lambda, AppSync, CloudFormation, SQS,
-              SNS, etc)
-            </li>
-          </ul>
+          <br />
+          <h2>some things i've <em>helped</em> build</h2>
+          <section class="projects">
+            <div>
+              <h4>Rings AI App</h4>
+              <img
+                src="assets/images/projects/rings-ai.png"
+                alt="a screenshot of a relationships management app called Rings AI"
+              />
+              <p>
+                <a href="https://rings.ai/">Live Site</a>
+              </p>
+              <em>
+                An all-in-one data enriched CRM (or CRM enrichment layer) to
+                identify, access, and win more opportunities.
+              </em>
+            </div>
+            <div>
+              <h4>FlowFi App</h4>
+              <img
+                src="assets/images/projects/flowfi.png"
+                alt="a screenshot of a fintech app called FlowFi"
+              />
+              <p>
+                <a href="https://www.flowfi.com/">Live Site</a>
+              </p>
+              <em>
+                Matches the best businesses with leading experts to help them
+                with their bookkeeping, FP&A, HR, and tax needs.
+              </em>
+            </div>
+          </section>
 
-          <h2>some things i've built</h2>
-          <section id="projects">
+          <br />
+          <h2>some things <em>i've</em> built</h2>
+          <section class="projects">
             <div>
               <h4>OpenDelta App</h4>
               <img
@@ -182,9 +159,7 @@
               </p>
               <em>
                 A simple markdown editor for lyrics that always displays the
-                entire song (this is a
-                <strong>basic app I use on my laptop</strong> when jamming; it's
-                not recommended on a narrow screen)
+                entire song
               </em>
             </div>
             <div>
@@ -213,103 +188,7 @@
             </div>
           </section>
 
-          <h2>where i've worked</h2>
-          <p>
-            I'm an independent contractor who works with all types of clients.
-          </p>
-          <p>
-            My last full-time gig was at high-growth fintech,
-            <a href="https://flowfi.com/">FlowFi</a>, where I was the
-            <strong>only cold hire</strong> on the engineering team, and moved
-            quickly <strong>from junior to mid</strong>. I regularly contributed
-            to every layer in the stack, front to back.
-          </p>
-
-          <h3>Flow Finance</h3>
-          <span>
-            <h4>Software Engineer, Full Stack</h4>
-            <em>~ Jul 2022 to Jan 2023 ~</em>
-          </span>
-          <ul>
-            <li>
-              Built internal backend (<strong
-                >Lambda function built in Scala, exposed through GraphQL with
-                API Gateway, using DynamoDB for storage</strong
-              >) and frontend (<strong>TypeScript and React</strong>) services
-              that handled 3rd-party OAuth connections and ingest of customer
-              data
-            </li>
-            <li>
-              Created <strong>RESTful APIs</strong> with web hooks to promote
-              continued communication with existing connections
-            </li>
-            <li>
-              Rebuilt an existing Go app in Scala to transform and
-              <strong>export customer data as PDFs or spreadsheets</strong>
-            </li>
-            <li>
-              Helped out with frontend development as needed and during crunch
-              time
-            </li>
-          </ul>
-          <span>
-            <h4>Junior Software Engineer, Frontend</h4>
-            <em>~ Jul 2021 to Jul 2022 ~</em>
-          </span>
-          <ul>
-            <li>
-              Developed the new frontend page (<strong
-                >TypeScript, React, Redux</strong
-              >) for customers to
-              <strong>manage member access and permissions</strong> on the
-              FlowFi platform
-            </li>
-            <li>
-              Helped greenfield a new app for accountants to
-              <strong
-                >automate their processes, saving time and reducing cost</strong
-              >
-            </li>
-            <li>
-              Created <strong>major customer-facing features</strong>,
-              troubleshot bugs, and worked closely with our product and design
-              teams to improve user experience
-            </li>
-          </ul>
-          <h3>Higher Education IT & IS</h3>
-          <p>
-            In my pre-coding days, I worked in various tech-adjacent admin
-            roles, both for
-            <a href="https://wallawalla.edu/">Walla Walla University</a> and
-            <a href="https://redlands.edu/">University of Redlands</a>. I
-            <strong>wrote SQL, managed BI systems</strong>, and performed
-            <strong>IS/IT support and maintenance</strong> for my department. I
-            also filled in as interim Director of
-            <strong>Institutional Research</strong> at WWU.
-          </p>
-
-          <h2>what i've studied</h2>
-          <h3>full-stack web development</h3>
-          <ul>
-            <li>
-              graduated from
-              <a href="https://www.appacademy.io/">App Academy</a> (a
-              world-class 1000+ hour <strong>coding bootcamp</strong>) in 2021
-            </li>
-          </ul>
-          <h3>business admin & finance</h3>
-          <ul>
-            <li>
-              earned an <strong>MBA with a Finance concentration</strong> from
-              <a href="https://redlands.edu/">University of Redlands</a>
-            </li>
-            <li>
-              and before that a <strong>BBA</strong> (Bachelor of Business
-              Administration) from
-              <a href="https://wallawalla.edu/">Walla Walla University</a>
-            </li>
-          </ul>
-
+          <br />
           <h2>how to reach me</h2>
           <p id="know-more">Would you like to know more? Send me an email 👇</p>
           <img
