animation timing; project links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 alt="a screenshot of a relationships management app called Rings AI"
               />
               <p>
-                <a href="https://rings.ai/">Live Site</a>
+                <a href="https://rings.ai/">Landing Page</a>
               </p>
               <em>
                 An all-in-one data enriched CRM (or CRM enrichment layer) to
@@ -87,7 +87,7 @@
                 alt="a screenshot of a fintech app called FlowFi"
               />
               <p>
-                <a href="https://www.flowfi.com/">Live Site</a>
+                <a href="https://www.flowfi.com/">Landing Page</a>
               </p>
               <em>
                 Matches the best businesses with leading experts to help them
